<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:exb_color="@color/yellow"
        android:id="@+id/messages_fragment"
        android:icon="@drawable/messages"
        android:title="@string/messages" />

    <item
        app:exb_color="@color/yellow"
        android:id="@+id/jobs_fragment"
        android:icon="@drawable/jobs"
        android:title="@string/my_jobs" />

    <item
        app:exb_color="@color/yellow"
        android:icon="@drawable/bottom_icon_3"
        android:id="@+id/browse_fragment"
        android:title="@string/browse_jobs" />

    <item
        app:exb_color="@color/yellow"
        android:id="@+id/jobs_invite_fragment"
        android:icon="@drawable/bottom_icon_4"
        android:title="@string/job_invites" />

    <item
        app:exb_color="@color/yellow"
        android:id="@+id/profile_fragment"
        android:icon="@drawable/bottom_icon_5"
        android:title="@string/profile"/>
</menu>